# controllers/Courses.js
@@ -9,10 +9,15 @@ var Courses = require('./CoursesService');
 module.exports.coursesGet = function coursesGet (req, res, next) {
   var id = req.swagger.params['id'].value;
   var departmentId = req.swagger.params['department_id'].value;
-  
+  var courses = req.swagger.params['courses'].originalValue;
   async.series([
     function(callback){
-	    Courses.coursesGet(id, departmentId,callback);
+        if(typeof courses!== 'undefined'){
+            Courses.Get(courses,callback);
+        }
+        else{
+            Courses.coursesGet(id, departmentId,callback);
+        }
     }],
 	function(err, result){
 	  if(typeof result !== 'undefined') {
